--- a/BuddhaBowls.Test/BuddhaBowls.Test.csproj
+++ b/BuddhaBowls.Test/BuddhaBowls.Test.csproj
@@ -72,7 +72,7 @@
     <Compile Include="DatabaseInterfaceTest.cs" />
     <Compile Include="HelperTests.cs" />
     <Compile Include="MockObjects.cs" />
-    <Compile Include="ModelContainerTests.cs" />
+    <Compile Include="DBCacheTests.cs" />
     <Compile Include="ModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
