--- a/BuddhaBowls/BuddhaBowls.csproj
+++ b/BuddhaBowls/BuddhaBowls.csproj
@@ -178,11 +178,13 @@
     <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\ISortable.cs" />
     <Compile Include="Models\OrderStat.cs" />
+    <Compile Include="Models\PAndLSummarySection.cs" />
     <Compile Include="Models\PrepItem.cs" />
     <Compile Include="Models\RecipeItem.cs" />
     <Compile Include="Models\Vendor.cs" />
     <Compile Include="Models\VendorInventoryItem.cs" />
     <Compile Include="Services\ModelContainers\BreadWeekContainer.cs" />
+    <Compile Include="Services\ModelContainers\ExpenseItemsContainer.cs" />
     <Compile Include="Services\ModelContainers\InventoriesContainer.cs" />
     <Compile Include="Services\ModelContainers\InventoryItemsContainer.cs" />
     <Compile Include="Services\ModelContainers\ModelContainer.cs" />
