--- a/BuddhaBowls/BuddhaBowls.csproj
+++ b/BuddhaBowls/BuddhaBowls.csproj
@@ -33,7 +33,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>87</ApplicationRevision>
+    <ApplicationRevision>90</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -190,6 +190,7 @@
     <Compile Include="Messengers\Messenger.cs" />
     <Compile Include="Models\BreadOrder.cs" />
     <Compile Include="Models\BreadOrderTotal.cs" />
+    <Compile Include="Models\CountPrepItem.cs" />
     <Compile Include="Models\DailySale.cs" />
     <Compile Include="Models\ExpenseItem.cs" />
     <Compile Include="Models\IItem.cs" />
